--- a/.github/workflows/lbot-ci.yml
+++ b/.github/workflows/lbot-ci.yml
@@ -1,31 +1,65 @@
 name: L-Bot CI
+
 on:
-  pull_request:
-  push:
-    branches: [ main ]
+  pull_request: { branches: [ main ] }
+  push:        { branches: [ main ] }
+
+concurrency:
+  group: lbot-ci-${{ github.ref }}
+  cancel-in-progress: true
+
+permissions:
+  contents: read
+
+env:
+  MIN_SHARPE: "1.20"
+  MAX_DD:     "0.25"
+
 jobs:
   ci:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+
       - uses: actions/setup-python@v5
         with:
           python-version: '3.11'
+
+      - name: Cache pip
+        uses: actions/cache@v4
+        with:
+          path: ~/.cache/pip
+          key: pip-${{ runner.os }}-${{ hashFiles('**/requirements.txt') }}
+          restore-keys: pip-${{ runner.os }}-
+
       - name: Install deps
         run: |
           python -m pip install --upgrade pip
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+
       - name: Quick backtest
         run: |
           python backtests/run_quick_backtest.py --minutes 5000 --symbol XAUUSD > backtests/out.txt
+
       - name: Parse metrics
         run: python backtests/print_metrics.py backtests/out.txt > metrics.txt
-      - name: Enforce gate
-        run: python backtests/enforce_gate.py --maxdd 0.25 --min_sharpe 1.2 metrics.txt
-      - name: Upload report
-        uses: actions/upload-artifact@v4
-        with:
-          name: lbot-report
-          path: |
-            backtests/out.txt
-            metrics.txt
+
+            - name: Enforce gate
+  run: python backtests/enforce_gate.py --maxdd $MAX_DD --min_sharpe $MIN_SHARPE metrics.txt
+
+- name: Upload out.txt
+  if: always()
+  uses: actions/upload-artifact@v4
+  with:
+    name: backtest-out
+    path: backtests/out.txt
+    retention-days: 14
+
+- name: Upload metrics.txt
+  if: always()
+  uses: actions/upload-artifact@v4
+  with:
+    name: metrics
+    path: metrics.txt
+    retention-days: 14
+
