--- a/.github/workflows/apply-patch.yml
+++ b/.github/workflows/apply-patch.yml
@@ -1,4 +1,4 @@
-name: Apply patch v3.1
+name: Apply patch v4 (robust)
 on:
   issue_comment:
     types: [created]
@@ -11,74 +11,48 @@ jobs:
   apply:
     if: contains(github.event.comment.body, '/apply-patch')
     runs-on: ubuntu-latest
-    env:
-      GIT_TRACE: 1
-      GIT_CURL_VERBOSE: 1
     steps:
       - name: Checkout (full)
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-          persist-credentials: true
-          token: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Debug git
-        run: |
-          git --version
-          git remote -v
-          git status
-          echo "Repo=${{ github.repository }}  Actor=${{ github.actor }}  Ref=${{ github.ref }}"
-
-      - name: Extract patch (robust)
+      - name: Extract patch from comment (robust)
         id: extract
         uses: actions/github-script@v7
         with:
           script: |
             const body = context.payload.comment.body || '';
+            // 1) ```patch / ```diff
             let m = body.match(/^[>\s]*```(?:patch|diff)\s*\r?\n([\s\S]*?)\r?\n[>\s]*```/im);
+            // 2) fallback: fenced code block ใดๆ
             if (!m) m = body.match(/^[>\s]*```\s*\r?\n([\s\S]*?)\r?\n[>\s]*```/im);
             if (!m) core.setFailed('No fenced code block found in the comment.');
             else core.setOutput('patch', m[1]);
 
-      - name: Save patch
+      - name: Save patch to file
         run: |
           printf "%s" "${{ steps.extract.outputs.patch }}" > change.patch
-          echo "---- patch preview ----"
+          echo "---- patch preview (first 30 lines) ----"
           head -n 30 change.patch || true
-
-      - name: Create work branch
-        id: mk
-        run: |
-          BR="patch/apply-${{ github.run_id }}"
-          git switch -c "$BR"
-          echo "branch=$BR" >> $GITHUB_OUTPUT
 
       - name: Apply patch
         run: |
           git config user.name  "github-actions[bot]"
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git apply -p0 --whitespace=nowarn change.patch
-          git add -A
-          if git diff --cached --quiet; then
-            echo "No changes to commit"; exit 0; fi
-          git commit -m "apply-patch from issue #${{ github.event.issue.number }} by @${{ github.actor }}"
+          git status --porcelain
 
-      - name: Ensure remote uses token (important)
-        run: |
-          git remote set-url origin \
-            https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git
-          git remote -v
-
-      - name: Push branch (verbose)
-        run: |
-          git push -vvv origin "${{ steps.mk.outputs.branch }}"
-
-      - name: Open PR
-        env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          gh pr create \
-            --base main \
-            --head "${{ steps.mk.outputs.branch }}" \
-            --title "Apply patch from issue #${{ github.event.issue.number }}" \
-            --body "Created by workflow. Actor: @${{ github.actor }}."
+      # ใช้ action สำเร็จรูปในการสร้าง branch/commit/push และเปิด PR ให้เอง
+      - name: Create Pull Request
+        uses: peter-evans/create-pull-request@v6
+        with:
+          commit-message: |
+            apply-patch from issue #${{ github.event.issue.number }} by @${{ github.actor }}
+          branch: patch/apply-${{ github.run_id }}
+          title: Apply patch from issue #${{ github.event.issue.number }}
+          body: |
+            Created by workflow. Actor: @${{ github.actor }}.
+          base: main
+          signoff: false
+          delete-branch: true
