chore: remove duplicate modules at root; keep core/* only + ignore artifacts

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,12 @@
-# data & artifacts
+﻿# data & artifacts
 *.csv
 /data/
 /**/data/
 *.pkl
 *.pt
 *.onnx
+.venv/
+**/__pycache__/
+backtests/out.txt
+metrics.txt
+models/
